src/k8s/apps/headscale/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: headscale
spec:
  redirectScheme:
    scheme: https
    permanent: true
