src/k8s/apps/headscale/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headscale
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
