src/k8s/apps/headscale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale
  namespace: headscale
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: headscale-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: headscale.levizitting.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headscale
                port:
                  name: http
  tls:
    - secretName: headscale-shared-tls
      hosts:
        - headscale.levizitting.com
